@@ -57,6 +57,7 @@ LDADD =					\
 	$(PTHREAD_LIBS)			\
 	$(LDADD_NTP)			\
 	$(LIBM)				\
+	$(top_builddir)/sntp/unity/libunity.a	\
 	$(NULL)
 
 tests_LDADD =				\
@@ -65,20 +66,17 @@ tests_LDADD =				\
 	$(GTEST_LIBS)			\
 	$(NULL)
 
-unity_tests_LDADD =				\
-	$(LDADD)				\
-	$(top_builddir)/sntp/unity/libunity.a	\
-	$(NULL)
-
 AM_CFLAGS = $(CFLAGS_NTP)
 AM_CXXFLAGS = $(GTEST_CXXFLAGS)
 
 AM_CPPFLAGS  = $(NTP_INCS)
 AM_CPPFLAGS += -I$(top_srcdir)/sntp
-AM_CPPFLAGS += $(GTEST_CPPFLAGS)
 AM_CPPFLAGS += $(CPPFLAGS_NTP)
 AM_CPPFLAGS += -DUNITY_INCLUDE_CONFIG_H
 AM_CPPFLAGS += -I$(top_srcdir)/sntp/unity
+
+tests_CPPFLAGS  = $(AM_CPPFLAGS)
+tests_CPPFLAGS += $(GTEST_CPPFLAGS)
 
 AM_LDFLAGS = $(LDFLAGS_NTP)
 
@@ -100,7 +98,9 @@ tests_SOURCES =					\
 	g_hextolfp.cpp		\
 	g_humandate.cpp		\
 	g_lfpfunc.cpp		\
+	g_lfptest.h		\
 	g_lfptostr.cpp		\
+	g_libntptest.h		\
 	g_modetoa.cpp		\
 	g_msyslog.cpp		\
 	g_netof.cpp		\
@@ -111,12 +111,14 @@ tests_SOURCES =					\
 	g_recvbuff.cpp		\
 	g_refnumtoa.cpp		\
 	g_sfptostr.cpp		\
+	g_sockaddrtest.h	\
 	g_socktoa.cpp		\
 	g_ssl_init.cpp		\
 	g_statestr.cpp		\
 	g_strtolfp.cpp		\
 	g_timespecops.cpp	\
 	g_timestructs.cpp	\
+	g_timestructs.h		\
 	g_timevalops.cpp	\
 	g_tstotv.cpp		\
 	g_tvtots.cpp		\
@@ -167,24 +169,12 @@ BUILT_SOURCES +=			\
 	$(NULL)
 
 noinst_HEADERS =	\
-	g_lfptest.h	\
 	lfptest.h	\
-	g_libntptest.h	\
-	g_sockaddrtest.h	\
 	sockaddrtest.h	\
-	g_timestructs.h	\
 	test-libntp.h	\
 	$(NULL)
 
 ###
-
-test_a_md5encrypt_CFLAGS =		\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_a_md5encrypt_LDADD =		\
-	$(unity_tests_LDADD)		\
-	$(NULL)
 
 test_a_md5encrypt_SOURCES =		\
 	a_md5encrypt.c			\
@@ -196,14 +186,6 @@ $(srcdir)/run-a_md5encrypt.c: $(srcdir)/a_md5encrypt.c $(std_unity_list)
 
 ###
 
-test_atoint_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_atoint_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
 test_atoint_SOURCES =			\
 	atoint.c			\
 	run-atoint.c			\
@@ -213,14 +195,6 @@ $(srcdir)/run-atoint.c: $(srcdir)/atoint.c $(std_unity_list)
 	$(run_unity) atoint.c run-atoint.c
 
 ###
-
-test_atouint_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_atouint_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
 
 test_atouint_SOURCES =			\
 	atouint.c			\
@@ -232,14 +206,6 @@ $(srcdir)/run-atouint.c: $(srcdir)/atouint.c $(std_unity_list)
 
 ###
 
-test_authkeys_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_authkeys_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
 test_authkeys_SOURCES =			\
 	authkeys.c			\
 	run-authkeys.c			\
@@ -250,31 +216,15 @@ $(srcdir)/run-authkeys.c: $(srcdir)/authkeys.c $(std_unity_list)
 
 ###
 
-test_buftvtots_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
 test_buftvtots_SOURCES =		\
 	buftvtots.c			\
 	run-buftvtots.c			\
-	$(NULL)
-
-test_buftvtots_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
 	$(NULL)
 
 $(srcdir)/run-buftvtots.c: $(srcdir)/buftvtots.c $(std_unity_list)
 	$(run_unity) buftvtots.c run-buftvtots.c
 
 ###
-
-test_calendar_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_calendar_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
 
 test_calendar_SOURCES =			\
 	calendar.c			\
@@ -287,15 +237,6 @@ $(srcdir)/run-calendar.c: $(srcdir)/calendar.c $(std_unity_list)
 
 ###
 
-test_caltontp_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_caltontp_LDADD =			\
-	$(unity_tests_LDADD)		\
-	-lpthread			\
-	$(NULL)
-
 test_caltontp_SOURCES =			\
 	caltontp.c			\
 	run-caltontp.c			\
@@ -306,19 +247,15 @@ $(srcdir)/run-caltontp.c: $(srcdir)/caltontp.c $(std_unity_list)
 
 ###
 
-test_caljulian_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
+test_caljulian_LDADD =		\
+	$(LDADD)		\
+	-lpthread		\
 	$(NULL)
 
-test_caljulian_LDADD =			\
-	$(unity_tests_LDADD)		\
-	-lpthread			\
-	$(NULL)
-
-test_caljulian_SOURCES =		\
-	caljulian.c			\
-	run-caljulian.c			\
-	test-libntp.c			\
+test_caljulian_SOURCES =	\
+	caljulian.c		\
+	run-caljulian.c		\
+	test-libntp.c		\
 	$(NULL)
 
 $(srcdir)/run-caljulian.c: $(srcdir)/caljulian.c $(std_unity_list)
@@ -326,18 +263,10 @@ $(srcdir)/run-caljulian.c: $(srcdir)/caljulian.c $(std_unity_list)
 
 ###
 
-test_calyearstart_CFLAGS =		\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_calyearstart_LDADD =		\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_calyearstart_SOURCES =		\
-	calyearstart.c			\
-	run-calyearstart.c		\
-	test-libntp.c			\
+test_calyearstart_SOURCES =	\
+	calyearstart.c		\
+	run-calyearstart.c	\
+	test-libntp.c		\
 	$(NULL)
 
 $(srcdir)/run-calyearstart.c: $(srcdir)/calyearstart.c $(std_unity_list)
@@ -345,18 +274,10 @@ $(srcdir)/run-calyearstart.c: $(srcdir)/calyearstart.c $(std_unity_list)
 
 ###
 
-test_clocktime_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_clocktime_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_clocktime_SOURCES =		\
-	clocktime.c			\
-	run-clocktime.c			\
-	test-libntp.c			\
+test_clocktime_SOURCES =	\
+	clocktime.c		\
+	run-clocktime.c		\
+	test-libntp.c		\
 	$(NULL)
 
 $(srcdir)/run-clocktime.c: $(srcdir)/clocktime.c $(std_unity_list)
@@ -364,18 +285,14 @@ $(srcdir)/run-clocktime.c: $(srcdir)/clocktime.c $(std_unity_list)
 
 ###
 
-test_decodenetnum_CFLAGS =		\
-	-I$(top_srcdir)/sntp/unity	\
+test_decodenetnum_LDADD =	\
+	$(LDADD)		\
+	-lpthread		\
 	$(NULL)
 
-test_decodenetnum_LDADD =		\
-	$(unity_tests_LDADD)		\
-	-lpthread			\
-	$(NULL)
-
-test_decodenetnum_SOURCES =		\
-	decodenetnum.c			\
-	run-decodenetnum.c		\
+test_decodenetnum_SOURCES =	\
+	decodenetnum.c		\
+	run-decodenetnum.c	\
 	$(NULL)
 
 $(srcdir)/run-decodenetnum.c: $(srcdir)/decodenetnum.c $(std_unity_list)
@@ -383,17 +300,9 @@ $(srcdir)/run-decodenetnum.c: $(srcdir)/decodenetnum.c $(std_unity_list)
 
 ###
 
-test_hextoint_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_hextoint_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_hextoint_SOURCES =			\
-	hextoint.c			\
-	run-hextoint.c			\
+test_hextoint_SOURCES =		\
+	hextoint.c		\
+	run-hextoint.c		\
 	$(NULL)
 
 $(srcdir)/run-hextoint.c: $(srcdir)/hextoint.c $(std_unity_list)
@@ -401,17 +310,9 @@ $(srcdir)/run-hextoint.c: $(srcdir)/hextoint.c $(std_unity_list)
 
 ###
 
-test_hextolfp_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_hextolfp_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_hextolfp_SOURCES =			\
-	hextolfp.c			\
-	run-hextolfp.c			\
+test_hextolfp_SOURCES =		\
+	hextolfp.c		\
+	run-hextolfp.c		\
 	$(NULL)
 
 $(srcdir)/run-hextolfp.c: $(srcdir)/hextolfp.c $(std_unity_list)
@@ -419,17 +320,9 @@ $(srcdir)/run-hextolfp.c: $(srcdir)/hextolfp.c $(std_unity_list)
 
 ###
 
-test_humandate_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_humandate_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_humandate_SOURCES =		\
-	humandate.c			\
-	run-humandate.c			\
+test_humandate_SOURCES =	\
+	humandate.c		\
+	run-humandate.c		\
 	$(NULL)
 
 $(srcdir)/run-humandate.c: $(srcdir)/humandate.c $(std_unity_list)
@@ -437,17 +330,9 @@ $(srcdir)/run-humandate.c: $(srcdir)/humandate.c $(std_unity_list)
 
 ###
 
-test_lfpfunc_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_lfpfunc_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_lfpfunc_SOURCES =			\
-	lfpfunc.c			\
-	run-lfpfunc.c			\
+test_lfpfunc_SOURCES =		\
+	lfpfunc.c		\
+	run-lfpfunc.c		\
 	$(NULL)
 
 $(srcdir)/run-lfpfunc.c: $(srcdir)/lfpfunc.c $(std_unity_list)
@@ -455,17 +340,9 @@ $(srcdir)/run-lfpfunc.c: $(srcdir)/lfpfunc.c $(std_unity_list)
 
 ###
 
-test_lfptostr_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_lfptostr_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_lfptostr_SOURCES =			\
-	lfptostr.c			\
-	run-lfptostr.c			\
+test_lfptostr_SOURCES =		\
+	lfptostr.c		\
+	run-lfptostr.c		\
 	$(NULL)
 
 $(srcdir)/run-lfptostr.c: $(srcdir)/lfptostr.c $(std_unity_list)
@@ -473,17 +350,9 @@ $(srcdir)/run-lfptostr.c: $(srcdir)/lfptostr.c $(std_unity_list)
 
 ###
 
-test_modetoa_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_modetoa_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_modetoa_SOURCES =			\
-	modetoa.c			\
-	run-modetoa.c			\
+test_modetoa_SOURCES =		\
+	modetoa.c		\
+	run-modetoa.c		\
 	$(NULL)
 
 $(srcdir)/run-modetoa.c: $(srcdir)/modetoa.c $(std_unity_list)
@@ -491,17 +360,9 @@ $(srcdir)/run-modetoa.c: $(srcdir)/modetoa.c $(std_unity_list)
 
 ###
 
-test_msyslog_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_msyslog_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_msyslog_SOURCES =			\
-	msyslog.c			\
-	run-msyslog.c			\
+test_msyslog_SOURCES =		\
+	msyslog.c		\
+	run-msyslog.c		\
 	$(NULL)
 
 $(srcdir)/run-msyslog.c: $(srcdir)/msyslog.c $(std_unity_list)
@@ -509,17 +370,9 @@ $(srcdir)/run-msyslog.c: $(srcdir)/msyslog.c $(std_unity_list)
 
 ###
 
-test_netof_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_netof_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_netof_SOURCES =			\
-	netof.c				\
-	run-netof.c			\
+test_netof_SOURCES =		\
+	netof.c			\
+	run-netof.c		\
 	$(NULL)
 
 $(srcdir)/run-netof.c: $(srcdir)/netof.c $(std_unity_list)
@@ -527,17 +380,9 @@ $(srcdir)/run-netof.c: $(srcdir)/netof.c $(std_unity_list)
 
 ###
 
-test_numtoa_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_numtoa_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_numtoa_SOURCES =			\
-	numtoa.c			\
-	run-numtoa.c			\
+test_numtoa_SOURCES =		\
+	numtoa.c		\
+	run-numtoa.c		\
 	$(NULL)
 
 $(srcdir)/run-numtoa.c: $(srcdir)/numtoa.c $(std_unity_list)
@@ -545,17 +390,9 @@ $(srcdir)/run-numtoa.c: $(srcdir)/numtoa.c $(std_unity_list)
 
 ###
 
-test_numtohost_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_numtohost_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_numtohost_SOURCES =		\
-	numtohost.c			\
-	run-numtohost.c			\
+test_numtohost_SOURCES =	\
+	numtohost.c		\
+	run-numtohost.c		\
 	$(NULL)
 
 $(srcdir)/run-numtohost.c: $(srcdir)/numtohost.c $(std_unity_list)
@@ -563,17 +400,9 @@ $(srcdir)/run-numtohost.c: $(srcdir)/numtohost.c $(std_unity_list)
 
 ###
 
-test_octtoint_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_octtoint_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_octtoint_SOURCES =			\
-	octtoint.c			\
-	run-octtoint.c			\
+test_octtoint_SOURCES =		\
+	octtoint.c		\
+	run-octtoint.c		\
 	$(NULL)
 
 $(srcdir)/run-octtoint.c: $(srcdir)/octtoint.c $(std_unity_list)
@@ -581,17 +410,9 @@ $(srcdir)/run-octtoint.c: $(srcdir)/octtoint.c $(std_unity_list)
 
 ###
 
-test_prettydate_CFLAGS =		\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_prettydate_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_prettydate_SOURCES =		\
-	prettydate.c			\
-	run-prettydate.c		\
+test_prettydate_SOURCES =	\
+	prettydate.c		\
+	run-prettydate.c	\
 	$(NULL)
 
 $(srcdir)/run-prettydate.c: $(srcdir)/prettydate.c $(std_unity_list)
@@ -599,17 +420,9 @@ $(srcdir)/run-prettydate.c: $(srcdir)/prettydate.c $(std_unity_list)
 
 ###
 
-test_recvbuff_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_recvbuff_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_recvbuff_SOURCES =			\
-	recvbuff.c			\
-	run-recvbuff.c			\
+test_recvbuff_SOURCES =		\
+	recvbuff.c		\
+	run-recvbuff.c		\
 	$(NULL)
 
 $(srcdir)/run-recvbuff.c: $(srcdir)/recvbuff.c $(std_unity_list)
@@ -617,17 +430,9 @@ $(srcdir)/run-recvbuff.c: $(srcdir)/recvbuff.c $(std_unity_list)
 
 ###
 
-test_refidsmear_CFLAGS =		\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_refidsmear_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_refidsmear_SOURCES =		\
-	refidsmear.c			\
-	run-refidsmear.c		\
+test_refidsmear_SOURCES =	\
+	refidsmear.c		\
+	run-refidsmear.c	\
 	$(NULL)
 
 $(srcdir)/run-refidsmear.c: $(srcdir)/refidsmear.c $(std_unity_list)
@@ -635,17 +440,9 @@ $(srcdir)/run-refidsmear.c: $(srcdir)/refidsmear.c $(std_unity_list)
 
 ###
 
-test_refnumtoa_CFLAGS =				\
-	-I$(top_srcdir)/sntp/unity		\
-	$(NULL)
-
-test_refnumtoa_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_refnumtoa_SOURCES =		\
-	refnumtoa.c			\
-	run-refnumtoa.c			\
+test_refnumtoa_SOURCES =	\
+	refnumtoa.c		\
+	run-refnumtoa.c		\
 	$(NULL)
 
 $(srcdir)/run-refnumtoa.c: $(srcdir)/refnumtoa.c $(std_unity_list)
@@ -653,17 +450,9 @@ $(srcdir)/run-refnumtoa.c: $(srcdir)/refnumtoa.c $(std_unity_list)
 
 ###
 
-test_sfptostr_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_sfptostr_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_sfptostr_SOURCES =			\
-	sfptostr.c			\
-	run-sfptostr.c			\
+test_sfptostr_SOURCES =		\
+	sfptostr.c		\
+	run-sfptostr.c		\
 	$(NULL)
 
 $(srcdir)/run-sfptostr.c: $(srcdir)/sfptostr.c $(std_unity_list)
@@ -671,17 +460,9 @@ $(srcdir)/run-sfptostr.c: $(srcdir)/sfptostr.c $(std_unity_list)
 
 ###
 
-test_socktoa_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_socktoa_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_socktoa_SOURCES =			\
-	socktoa.c			\
-	run-socktoa.c			\
+test_socktoa_SOURCES =		\
+	socktoa.c		\
+	run-socktoa.c		\
 	$(NULL)
 
 $(srcdir)/run-socktoa.c: $(srcdir)/socktoa.c $(std_unity_list)
@@ -689,17 +470,9 @@ $(srcdir)/run-socktoa.c: $(srcdir)/socktoa.c $(std_unity_list)
 
 ###
 
-test_ssl_init_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_ssl_init_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_ssl_init_SOURCES =			\
-	ssl_init.c			\
-	run-ssl_init.c			\
+test_ssl_init_SOURCES =		\
+	ssl_init.c		\
+	run-ssl_init.c		\
 	$(NULL)
 
 $(srcdir)/run-ssl_init.c: $(srcdir)/ssl_init.c $(std_unity_list)
@@ -707,17 +480,9 @@ $(srcdir)/run-ssl_init.c: $(srcdir)/ssl_init.c $(std_unity_list)
 
 ###
 
-test_statestr_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_statestr_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_statestr_SOURCES =			\
-	statestr.c			\
-	run-statestr.c			\
+test_statestr_SOURCES =		\
+	statestr.c		\
+	run-statestr.c		\
 	$(NULL)
 
 $(srcdir)/run-statestr.c: $(srcdir)/statestr.c $(std_unity_list)
@@ -725,18 +490,14 @@ $(srcdir)/run-statestr.c: $(srcdir)/statestr.c $(std_unity_list)
 
 ###
 
-test_strtolfp_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
+test_strtolfp_LDADD =		\
+	$(LDADD)		\
+	-lpthread		\
 	$(NULL)
 
-test_strtolfp_LDADD =			\
-	$(unity_tests_LDADD)		\
-	-lpthread			\
-	$(NULL)
-
-test_strtolfp_SOURCES =			\
-	strtolfp.c			\
-	run-strtolfp.c			\
+test_strtolfp_SOURCES =		\
+	strtolfp.c		\
+	run-strtolfp.c		\
 	$(NULL)
 
 $(srcdir)/run-strtolfp.c: $(srcdir)/strtolfp.c $(std_unity_list)
@@ -744,17 +505,9 @@ $(srcdir)/run-strtolfp.c: $(srcdir)/strtolfp.c $(std_unity_list)
 
 ###
 
-test_timespecops_CFLAGS =		\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_timespecops_LDADD =		\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_timespecops_SOURCES =		\
-	timespecops.c			\
-	run-timespecops.c		\
+test_timespecops_SOURCES =	\
+	timespecops.c		\
+	run-timespecops.c	\
 	$(NULL)
 
 $(srcdir)/run-timespecops.c: $(srcdir)/timespecops.c $(std_unity_list)
@@ -762,17 +515,9 @@ $(srcdir)/run-timespecops.c: $(srcdir)/timespecops.c $(std_unity_list)
 
 ###
 
-test_timevalops_CFLAGS =		\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_timevalops_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_timevalops_SOURCES =		\
-	timevalops.c			\
-	run-timevalops.c		\
+test_timevalops_SOURCES =	\
+	timevalops.c		\
+	run-timevalops.c	\
 	$(NULL)
 
 $(srcdir)/run-timevalops.c: $(srcdir)/timevalops.c $(std_unity_list)
@@ -780,17 +525,9 @@ $(srcdir)/run-timevalops.c: $(srcdir)/timevalops.c $(std_unity_list)
 
 ###
 
-test_tstotv_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_tstotv_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_tstotv_SOURCES =			\
-	tstotv.c			\
-	run-tstotv.c			\
+test_tstotv_SOURCES =		\
+	tstotv.c		\
+	run-tstotv.c		\
 	$(NULL)
 
 $(srcdir)/run-tstotv.c: $(srcdir)/tstotv.c $(std_unity_list)
@@ -798,17 +535,9 @@ $(srcdir)/run-tstotv.c: $(srcdir)/tstotv.c $(std_unity_list)
 
 ###
 
-test_tvtots_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_tvtots_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_tvtots_SOURCES =			\
-	tvtots.c			\
-	run-tvtots.c			\
+test_tvtots_SOURCES =		\
+	tvtots.c		\
+	run-tvtots.c		\
 	$(NULL)
 
 $(srcdir)/run-tvtots.c: $(srcdir)/tvtots.c $(std_unity_list)
@@ -816,17 +545,9 @@ $(srcdir)/run-tvtots.c: $(srcdir)/tvtots.c $(std_unity_list)
 
 ###
 
-test_uglydate_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_uglydate_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_uglydate_SOURCES =			\
-	uglydate.c			\
-	run-uglydate.c			\
+test_uglydate_SOURCES =		\
+	uglydate.c		\
+	run-uglydate.c		\
 	$(NULL)
 
 $(srcdir)/run-uglydate.c: $(srcdir)/uglydate.c $(std_unity_list)
@@ -834,17 +555,9 @@ $(srcdir)/run-uglydate.c: $(srcdir)/uglydate.c $(std_unity_list)
 
 ###
 
-test_vi64ops_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_vi64ops_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_vi64ops_SOURCES =			\
-	vi64ops.c			\
-	run-vi64ops.c			\
+test_vi64ops_SOURCES =		\
+	vi64ops.c		\
+	run-vi64ops.c		\
 	$(NULL)
 
 $(srcdir)/run-vi64ops.c: $(srcdir)/vi64ops.c $(std_unity_list)
@@ -852,17 +565,9 @@ $(srcdir)/run-vi64ops.c: $(srcdir)/vi64ops.c $(std_unity_list)
 
 ###
 
-test_ymd2yd_CFLAGS =			\
-	-I$(top_srcdir)/sntp/unity	\
-	$(NULL)
-
-test_ymd2yd_LDADD =			\
-	$(unity_tests_LDADD)		\
-	$(NULL)
-
-test_ymd2yd_SOURCES =			\
-	ymd2yd.c			\
-	run-ymd2yd.c			\
+test_ymd2yd_SOURCES =		\
+	ymd2yd.c		\
+	run-ymd2yd.c		\
 	$(NULL)
 
 $(srcdir)/run-ymd2yd.c: $(srcdir)/ymd2yd.c $(std_unity_list)
