@@ -37,6 +37,7 @@
 * sntp/libevent/evconfig-private.h: remove generated filefrom SCM.  H.Stenn.
 * sntp/unity/Makefile.am: fix some broken paths.  Harlan Stenn.
 * sntp/unity/unity.c: Clean up a printf().  Harlan Stenn.
+* Phase 1 deprecation of google test in tests/libntp/.  Harlan Stenn.
 ---
 (4.2.8p3) 2015/06/29 Released by Harlan Stenn <stenn@ntp.org>
 
